--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>menu project</h1>
+  <section class="menu"></section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
