--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-  <section class="menu"></section>
+  <section class="menu">
+    <!-- title -->
+    <div class="title">
+      <h2>our menu</h2>
+      <div class="underline"></div>
+    </div>
+    <!-- filter buttons -->
+  </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
