--- a/index.html
+++ b/index.html
@@ -20,8 +20,49 @@
       <div class="underline"></div>
     </div>
     <!-- filter buttons -->
+    <div class="btn-container">
+      <button class="filter-btn" type="button" data-id="all">all</button>
+      <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
+      <button class="filter-btn" type="button" data-id="lunch">lunch</button>
+      <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+    </div>
+    <!-- menu items -->
+    <div class="section-center">
+      <!-- single item -->
+      <article class="menu-item">
+        <img src="./menu-item.jpeg" alt="menu item" class="photo">
+        <div class="item-info">
+          <header>
+            <h4>buttermilk pancakes</h4>
+            <h4 class="price">$15</h4>
+          </header>
+          <p class="item-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perspiciatis, ratione ad laborum commodi omnis accusamus labore dolor incidunt veritatis?
+          </p>
+        </div>
+      </article>
+      <!-- end of single item -->
+    </div>
   </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
