--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     </div>
     <!-- filter buttons -->
     <div class="btn-container">
-      <button class="filter-btn" type="button" data-id="all">all</button>
+      <!-- <button class="filter-btn" type="button" data-id="all">all</button>
       <button class="filter-btn" type="button" data-id="breakfast">breakfast</button>
       <button class="filter-btn" type="button" data-id="lunch">lunch</button>
-      <button class="filter-btn" type="button" data-id="shakes">shakes</button>
+      <button class="filter-btn" type="button" data-id="shakes">shakes</button> -->
     </div>
     <!-- menu items -->
     <div class="section-center">
       <!-- single item -->
-      <article class="menu-item">
+      <!-- <article class="menu-item">
         <img src="./menu-item.jpeg" alt="menu item" class="photo">
         <div class="item-info">
           <header>
@@ -40,7 +40,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel perspiciatis, ratione ad laborum commodi omnis accusamus labore dolor incidunt veritatis?
           </p>
         </div>
-      </article>
+      </article> -->
       <!-- end of single item -->
     </div>
   </section>
